hard-gists/b85fcfd4a0479810e6aa/run.log
=== Docker Run Log for b85fcfd4a0479810e6aa ===
Started at: Mi 29. Okt 19:32:08 CET 2025

[2025-10-29 19:32:08] START: Running container for b85fcfd4a0479810e6aa
[2025-10-29 19:32:08] SUCCESS: Container c376c00784d573013e7bcfb34dc27d6d19a104c47bfdb5666be894e27a128d48 started for b85fcfd4a0479810e6aa
=== Container logs for b85fcfd4a0479810e6aa ===
  File "/snippet.py", line 11
    u'version': 1L,
                ^
SyntaxError: invalid decimal literal
=== End of logs for b85fcfd4a0479810e6aa ===
[2025-10-29 19:32:10] INFO: Container c376c00784d573013e7bcfb34dc27d6d19a104c47bfdb5666be894e27a128d48 has stopped
